src/snapshots/boxt__tui__tests__delete_rect.snap
---
source: src/tui.rs
expression: test.render()
---
┏━━━━━━━━━━━━━Boxt━━━━━━━━━━━━━┓
┃                              ┃
┃                              ┃
┃                              ┃
┃                              ┃
┃                              ┃
┃                              ┃
┗ Move <WASD> Rect <R> Quit <Q>┛
