src/snapshots/boxt__tui__tests__draw_rect.snap
---
source: src/tui.rs
expression: buf_string(&buf)
---
┏━━━━━━━━━━━━━Boxt━━━━━━━━━━━━━┓
┃+-+                           ┃
┃| |                           ┃
┃+-+ +-+                       ┃
┃    | |                       ┃
┃    +-+                       ┃
┃                              ┃
┗ Move <WASD> Rect <R> Quit <Q>┛
